FIXED Issue #642 - BUGFIX - : Scrollbar to inner content of the menu type.

--- a/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneMenuCommon.css
+++ b/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneMenuCommon.css
@@ -295,7 +295,7 @@
 
 .facesBackboneMenu.faces-Menu-slide
 {
-	height:100%;
+		height:100%;
     position:relative;
     overflow:hidden;
 }
@@ -304,9 +304,9 @@
 {
     -webkit-transform:translateX(100%);
     -moz-transform:translateX(100%);
-	transform:translateX(100%);
-	
-	position:absolute;
+		transform:translateX(100%);
+		overflow-y: auto;
+		position:absolute;
     top:0;
     left:0;
     height:100%;
